# Password-Strength-Evaluation-Tool

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.bat
.github/workflows/: test.yml
password_tool/: __init__.py  __main__.py  common_passwords.txt  dictionary_check.py  entropy.py  evaluator.py  main.py  patterns.py
tests/: test_dictionary_check.py  test_entropy.py  test_evaluator.py  test_patterns.py
thesis/latest thesis version/: Introduction.tex  P1.tex  P2.tex  P3.tex  T1.tex  T2.tex  all in one file.tex  back.tex  front.tex  style.tex  template.tex
