[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "password-tool"
version = "1.0.0"
description = "A desktop password strength evaluator with hybrid 5-dimension scoring"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "customtkinter>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
